@startuml

title __GUI's Class Diagram__\n

  namespace es.ull.patrones {
    namespace es.ull.patrones.gui {
      class es.ull.patrones.gui.ChatGUI {
          ~ message : JTextField
          ~ random : JButton
          ~ randomMessages : ArrayList<String>
          ~ result : JTextArea
          ~ send : JButton
          ~ text : JLabel
          + ChatGUI()
          + createGUI()
          + setButtonSend()
          + setLabelChat()
          + setRandomAnswer()
          + setRandomMessages()
          + setTextArea()
          + setTextField()
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.gui {
      class es.ull.patrones.gui.Dialog {
          ~ bt1 : JButton
          ~ bt2 : JButton
          ~ bt3 : JButton
          ~ text : JLabel
          + Dialog()
          + addButtons()
          + setLabel()
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.gui {
      class es.ull.patrones.gui.DialogGroup {
          ~ bt1 : JButton
          ~ bt2 : JButton
          ~ bt3 : JButton
          ~ text : JLabel
          ~ text2 : JLabel
          + DialogGroup()
          + addButtons()
          + setLabel()
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.gui {
      class es.ull.patrones.gui.FirstFrame {
          ~ firstPanel : JPanel
          ~ group : JButton
          ~ image : JLabel
          ~ oneTo : JButton
          ~ textTop : JLabel
          + FirstFrame()
          + setButton()
          + setFirstPanel()
          + setLabel()
          - setLabelsImage()
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.gui {
      class es.ull.patrones.gui.GroupGUI {
          ~ message : JTextField
          ~ random : JButton
          ~ randomMessages : ArrayList<String>
          ~ result : JTextArea
          ~ send : JButton
          ~ text : JLabel
          + GroupGUI()
          + createGUI()
          + setButtonSend()
          + setLabelChat()
          + setRandomAnswer()
          + setRandomMessages()
          + setTextArea()
          + setTextField()
      }
    }
  }
  

  es.ull.patrones.gui.ChatGUI -up-|> javax.swing.JFrame
  es.ull.patrones.gui.ChatGUI o-- es.ull.patrones.mediators.IMediator : mediator
  es.ull.patrones.gui.ChatGUI o-- es.ull.patrones.users.User : sender
  es.ull.patrones.gui.ChatGUI o-- es.ull.patrones.users.User : userFinal
  es.ull.patrones.gui.Dialog -up-|> javax.swing.JDialog
  es.ull.patrones.gui.Dialog o-- es.ull.patrones.users.UserConcrete : ana
  es.ull.patrones.gui.Dialog o-- es.ull.patrones.users.UserConcrete : andrea
  es.ull.patrones.gui.Dialog o-- es.ull.patrones.users.UserConcrete : celeste
  es.ull.patrones.gui.Dialog o-- es.ull.patrones.users.UserConcrete : daniel
  es.ull.patrones.gui.Dialog o-- es.ull.patrones.mediators.IMediator : mediator
  es.ull.patrones.gui.DialogGroup -up-|> javax.swing.JDialog
  es.ull.patrones.gui.DialogGroup o-- es.ull.patrones.users.UserConcrete : ana
  es.ull.patrones.gui.DialogGroup o-- es.ull.patrones.users.UserConcrete : andrea
  es.ull.patrones.gui.DialogGroup o-- es.ull.patrones.users.UserConcrete : celeste
  es.ull.patrones.gui.DialogGroup o-- es.ull.patrones.users.UserConcrete : daniel
  es.ull.patrones.gui.DialogGroup o-- es.ull.patrones.mediators.IMediator : mediator
  es.ull.patrones.gui.FirstFrame -up-|> javax.swing.JFrame
  es.ull.patrones.gui.GroupGUI -up-|> javax.swing.JFrame
  es.ull.patrones.gui.GroupGUI o-- es.ull.patrones.mediators.IMediator : mediator
  es.ull.patrones.gui.GroupGUI o-- es.ull.patrones.users.User : sender


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
